Fix avatar overflow: add max-width to override global img reset

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -310,6 +310,7 @@
 }
 
 .homepage-avatar {
+  max-width: 120px;
   width: 120px;
   height: 120px;
   border-radius: 50%;
